[gd_scene load_steps=2 format=2]

[ext_resource path="res://pause_menu.gd" type="Script" id=1]

[node name="pause_menu" type="Control"]
visible = false
margin_right = 838.0
margin_bottom = 472.0
grow_horizontal = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 837.0
margin_bottom = 473.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_right = 835.0
margin_bottom = 67.0
text = "Jogo Pausado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 3.0
margin_top = 77.0
margin_right = 835.0
margin_bottom = 474.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_continuar" type="Button" parent="Panel/VBoxContainer"]
margin_top = 88.0
margin_right = 832.0
margin_bottom = 108.0
text = "Continuar"

[node name="button_reiniciar" type="Button" parent="Panel/VBoxContainer"]
margin_top = 188.0
margin_right = 832.0
margin_bottom = 208.0
text = "Reiniciar"

[node name="button_sair" type="Button" parent="Panel/VBoxContainer"]
margin_top = 288.0
margin_right = 832.0
margin_bottom = 308.0
text = "Sair"

[connection signal="pressed" from="Panel/VBoxContainer/button_continuar" to="." method="_on_button_continuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/button_reiniciar" to="." method="_on_button_reiniciar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/button_sair" to="." method="_on_button_sair_pressed"]
